# oj-judger

./: .env  Cargo.toml  README.md  build.rs  mount.sh
config/: config_template.toml
proto/: data.proto  judger.proto
src/: cgroups.rs  client.rs  compare.rs  config.rs  data.rs  judge.rs  lib.rs  main.rs  os.rs  run_command.rs  seccomp.rs  server.rs  timer.rs  utils.rs
src/languages/: cpp.rs  mod.rs
src/proto/: mod.rs
src/seccomp/: cpp.rs  mod.rs
