[package]
name = "oj-demo"
version = "0.1.0"
authors = ["zmm <2191482447@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
cgroups-rs = "0.2.5"
# cgroups-rs = {path = "extern/cgroups-rs"}
nix = "0.21.0"
libc = "0.2.97"
notify = "4.0.17"
syscallz = "0.15.0"
config = "0.11.0"
lazy_static = "1.4.0"
ipc-channel = "0.15.0"